Yeeting market data SDK
