# typegen/openapi/services/ai/openapi.yaml
@@ -70,6 +70,12 @@ paths:
             application/json:
               schema:
                 $ref: '../../common/components.yaml#/components/schemas/APIError'
+        '500':
+          description: Server error response
+          content:
+            application/json:
+              schema:
+                $ref: '../../common/components.yaml#/components/schemas/APIError'
 
   /ai/v1/classification/extraction:
     post:
@@ -106,6 +112,12 @@ paths:
                         $ref: '#/components/schemas/ExtractResponseMetadata'
         '4XX':
           description: Client error response
+          content:
+            application/json:
+              schema:
+                $ref: '../../common/components.yaml#/components/schemas/APIError'
+        '500':
+          description: Server error response
           content:
             application/json:
               schema:
